--- a/ParDis/src/design.css
+++ b/ParDis/src/design.css
@@ -201,7 +201,129 @@
 	-fx-max-width: 10px;
 	-fx-background-color: transparent; 
 	-fx-padding: 0;
-
 }
+
+.leaderboard-container {
+	-fx-background-color: #FFFFFF;
+	-fx-max-width: 800px;	
+	-fx-pref-height: 450px;	
+	-fx-padding: 30px;
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0, -4, 8);
+	-fx-background-radius: 12;
+	-fx-border-color: #F7F7F7; 
+    -fx-border-width: 2px;
+    -fx-border-style: solid; 
+    -fx-border-radius: 12px;
+}
+
+.label-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #000000;
+    -fx-font-weight: 900;
+    -fx-font-size: 2em;
+    
+}
+
+.label-under-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: rgba(0, 0, 0, 0.6);
+	-fx-font-size: 1.2em;
+    -fx-font-weight: 500;
+	-fx-wrap-text: true;
+    -fx-text-alignment: center; 
+}
+
+.rank1ContainerLeft-leaderboard {
+	-fx-background-color: #000000;
+	-fx-pref-width: 75px;	
+	-fx-pref-height: 55px;	
+	-fx-padding: 10px;
+	-fx-background-radius: 5;
+	-fx-text-fill: #FFFFFF;
+}
+
+.rank1ContainerRight-leaderboard {
+	-fx-background-color: #000000;
+	-fx-max-width: 400px;	
+	-fx-pref-height: 55px;	
+	-fx-padding: 10px 30px 10px 30px;
+	-fx-background-radius: 5;
+	-fx-text-fill: #FFFFFF;
+}
+
+.rank1-label-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #FFFFFF;
+    -fx-font-weight: 900;
+    -fx-font-size: 1.80em;
+}
+
+.rank1-label-right-score-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #FFFFFF;
+    -fx-font-weight: 900;
+    -fx-font-size: 1.2em;
+}
+
+.rank1-label-right-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #FFFFFF;
+    -fx-font-weight: 900;
+    -fx-font-size: 1.2em;
+   	-fx-min-width: 100px;
+}
+
+
+.rankingContainerLeft-leaderboard {
+	-fx-background-color: transparent;
+	-fx-pref-width: 75px;	
+	-fx-pref-height: 55px;	
+	-fx-padding: 10px;
+	-fx-background-radius: 5;
+	-fx-text-fill: #FFFFFF;
+	-fx-border-color: rgba(0, 0, 0, 0.6);
+    -fx-border-width: 1px;
+    -fx-border-style: solid; 
+    -fx-border-radius: 5px;
+	
+}
+
+.rankingContainerRight-leaderboard {
+	-fx-background-color: transparent;
+	-fx-max-width: 400px;	
+	-fx-pref-height: 55px;	
+	-fx-padding: 10px 30px 10px 30px;
+	-fx-background-radius: 5;
+	-fx-text-fill: #FFFFFF;
+	-fx-border-color: rgba(0, 0, 0, 0.6);
+    -fx-border-width: 1px;
+    -fx-border-style: solid; 
+    -fx-border-radius: 5px;
+}
+
+.ranking-label-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #000000;
+    -fx-font-weight: 900;
+    -fx-font-size: 1.80em;
+    
+}
+
+.ranking-label-right-score-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #000000;
+    -fx-font-weight: 900;
+    -fx-font-size: 1.2em;
+}
+
+.ranking-label-right-leaderboard {
+	-fx-font-family: 'Arial';
+	-fx-text-fill: #000000;
+    -fx-font-weight: 900;
+    -fx-font-size: 1.2em;
+   	-fx-min-width: 100px;
+}
+
+
 
 
