--- a/ParDis/src/loginStyle.css
+++ b/ParDis/src/loginStyle.css
@@ -91,7 +91,7 @@
 }
 
 .password-field {
-    -fx-background-color: transparent;
+	-fx-background-color: transparent;
     -fx-background-radius: 5;
     -fx-padding: 5 0 5 0; /* Adjust padding to match the HBox padding */
     -fx-border-color: transparent;
@@ -103,8 +103,9 @@
 	-fx-background-color: red;
 }
 
-.toggle-passowrd {
-	
+.toggle-password {
+	-fx-text-fill: blue;
+	-fx-background-color: red;
 }
 
 .not-toggle-password {
